# Roobu

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  compose.yml  justfile
.github/: copilot-instructions.md
.github/workflows/: ci-docker.yml  ci-lint.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
docs/: README.md  adding-a-new-site.md  architecture.md  commands.md  configuration.md  development.md  frontend-interface-sketch.md  frontend-mvp-checklist.md  proposed-layout.md  refactor-frontend-prep-plan.md  sites.md  troubleshooting.md
docs/api/: openapi.v1.json
docs/frontend/: roobu-api-client.ts  roobu-api-runtime.ts
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: connection-status.tsx  domain-select.tsx  image-card.tsx  loading-spinner.tsx  masonry-grid.tsx  scroll-sentinel.tsx  search-box.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
frontend/src/hooks/: use-infinite-scroll.ts  use-websocket.ts
frontend/src/lib/: constants.ts  types.ts
src/: checkpoint.rs  cli.rs  config.rs  embed.rs  error.rs  ingest.rs  main.rs  store.rs  ui.rs
src/cli/: mod.rs
src/cluster/: mod.rs
src/commands/: cluster.rs  contract.rs  graph_hdbscan.rs  ingest.rs  mod.rs  search.rs  serve.rs  stats.rs
src/commands/search/: cli.rs  mod.rs  service.rs
src/embed/: blend.rs  mod.rs  model.rs  preprocess.rs
src/ingest/: cycle.rs  events.rs  mod.rs
src/sites/: aibooru.rs  civitai.rs  common.rs  danbooru.rs  e621.rs  e6ai.rs  gelbooru.rs  http_client.rs  kemono.rs  konachan.rs  mod.rs  rule34.rs  safebooru.rs  xbooru.rs  yandere.rs
src/store/: cluster.rs  mod.rs  schema.rs  search.rs  stats.rs
src/ui/: macros.rs  mod.rs
src/web/: handlers.rs  mod.rs  state.rs  ws.rs
src/web/handlers/: activity.rs  common.rs  ingest.rs  mod.rs  posts.rs  recent.rs  search.rs  sites.rs
